<resources>
    <string name="app_name">أذكاري</string>
    <string name="setting">الإعدادات</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="azkar">الأذكار</string>
    <string name="favorite">المفضلة</string>
    <string name="myazkar">أذكاري الخاصة</string>
    <string name="sound">صوتيات</string>
    <string name="share">مشاركة التطبيق</string>
    <string name="communicate">تواصل معنا</string>
</resources>